# vaani

./: .env.local.example  .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTORS.md  LICENSE.md  README.md  SECURITY.md  SPEC.md  package.json  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml
app/: globals.css  layout.tsx  page.tsx
app/_components/: AvatarCell.tsx  AvatarStage.tsx  DemoPrewarm.tsx  GlossOverlay.tsx  MicControl.tsx  TopRule.tsx  VRMAvatar.tsx
app/api/glossify-llm/: route.ts
app/api/sign-from-text/: route.ts
app/api/transcribe/: route.ts
app/embed/: page.tsx
app/tools/capture/: page.tsx
lib/: animationPlayer.ts  animationSpec.ts  bones.ts  captureLookup.ts  capturePlayer.ts  fingerspelling.ts  glossify.test.ts  glossify.ts  glossifyLlm.ts  handshapes.ts  lexicon.ts  locations.ts  movements.ts  palmOrientations.ts  signArmPoses.ts  signCompose.ts  signDecomposition.ts  signPrompt.ts  useMic.ts  useSpeech.ts  useTranscriptPipeline.ts  vrmPoses.ts
lib/mocap/: capture.ts  holistic.ts  retarget.ts
lib/stores/: pipeline.ts
public/signs/: isl.csv
public/signs/captures/: FRIEND.json  HELLO.json  I.json  MY.json  NAME.json  NO.json  SEE.json  THANK-YOU.json  WANT.json  WATER.json  WHAT.json  YES.json  YOU.json  manifest.json
vaani-desktop/: index.html  package.json
vaani-desktop/src/: main.ts  styles.css
vaani-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vaani-desktop/src-tauri/capabilities/: default.json
vaani-desktop/src-tauri/src/: audio.rs  lib.rs  main.rs  state.rs  upload.rs
vaani-ext/: README.md  background.js  manifest.json  offscreen.html  offscreen.js  pip.html  pip.js  popup.html  popup.js
vaani-ext/icons/: .gitkeep
