[package]
name = "vaani-desktop"
version = "0.1.0"
description = "VAANI — ISL avatar buddy overlay for macOS"
authors = ["Arun AK"]
edition = "2021"

[lib]
name = "vaani_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json"] }
hound = "3.5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Direct ScreenCaptureKit integration — ruhear's pinning is stale, and SCK
# 1.5 exposes a clean `CMSampleBuffer::audio_buffer_list()` helper we use
# directly in audio.rs.
screencapturekit = "1.5"

